--- a/css/mobile.css
+++ b/css/mobile.css
@@ -113,12 +113,12 @@ article img{
   width:100%;
 }
 .con{
-  margin:0px auto;
-  max-width:414px;
+  /* margin:0px auto;
+  max-width:414px; */
   display:grid;
   padding:0px 1%;
   box-sizing: border-box;
-  grid-template-columns: auto;
+  grid-template-columns: 100%;
   grid-template-areas:
   "item"
   "brand"
