--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -232,7 +232,7 @@ html[xmlns] .flexslider .slides {
 }
 .flex-control-paging li a.flex-active {
   background: #fff;
-  /* background: rgba(0, 0, 0, 0.9); */
+  background: rgba(255, 255, 255, 0.9);
   cursor: default;
 }
 .flex-control-thumbs {
